--- a/V1/index.html
+++ b/V1/index.html
@@ -322,7 +322,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <ul class="game_team_list_detial">
+                            <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
                                         <div class="a1">
@@ -448,7 +448,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <ul class="game_team_list_detial">
+                            <ul class="game_team_list_detail">
                                 <li class="col-xs-6">
                                     <a href="##">
                                         <div class="a1">
@@ -574,7 +574,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <ul class="game_team_list_detial">
+                            <ul class="game_team_list_detail">
                                 <li class="active col-xs-6">
                                     <a href="##">
                                         <div class="a1">
@@ -754,8 +754,8 @@
                             <a href="##">DOTA2</a>
                         </li>
                     </ul>
-                    <div class="hot_player_detial"> 
-                        <div class="hot_player_detial_div active">
+                    <div class="hot_player_detail">
+                        <div class="hot_player_detail_div active">
                             <ul class="clearfix">
                                 <li class="active">
                                     <a href="##">
@@ -839,7 +839,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="hot_player_detial_div">
+                        <div class="hot_player_detail_div">
                             <ul class="clearfix">
                                 <li class="active">
                                     <a href="##">
@@ -923,7 +923,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="hot_player_detial_div">
+                        <div class="hot_player_detail_div">
                             <ul class="clearfix">
                                 <li class="active">
                                     <a href="##">
@@ -1032,7 +1032,7 @@
                                 <li><a href="##">DOTA2</a></li>
                             </ul>
                             <div class="news_dianjing_list">
-                                <div class="news_dianjing_detial active">
+                                <div class="news_dianjing_detail active">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <div class="news_dianjing_top_div">
@@ -1067,7 +1067,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="news_dianjing_detial">
+                                <div class="news_dianjing_detail">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1100,7 +1100,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="news_dianjing_detial">
+                                <div class="news_dianjing_detail">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1133,7 +1133,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="news_dianjing_detial">
+                                <div class="news_dianjing_detail">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1186,7 +1186,7 @@
                                 <li><a href="##">DOTA2</a></li>
                             </ul>
                             <div class="news_dianjing_list">
-                                <div class="news_dianjing_detial active">
+                                <div class="news_dianjing_detail active">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1219,7 +1219,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="news_dianjing_detial">
+                                <div class="news_dianjing_detail">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1252,7 +1252,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="news_dianjing_detial">
+                                <div class="news_dianjing_detail">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1285,7 +1285,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="news_dianjing_detial">
+                                <div class="news_dianjing_detail">
                                     <div class="news_dianjing_top">
                                         <a href="##">
                                             <img src="./images/game_team.png" alt="">
@@ -1417,15 +1417,15 @@
         })
         $(".hot_player_list").on("click",'li',function(){
             $(".hot_player_list li").removeClass("active").eq($(this).index()).addClass("active");
-            $(".hot_player_detial_div").removeClass("active").eq($(this).index()).addClass("active");
+            $(".hot_player_detail_div").removeClass("active").eq($(this).index()).addClass("active");
         })
         $(".news_dianjing1").on("click",'li',function(){
             $(".news_dianjing1 li").removeClass("active").eq($(this).index()).addClass("active");
-            $(".news_dianjing_tab1 .news_dianjing_detial").removeClass("active").eq($(this).index()).addClass("active");
+            $(".news_dianjing_tab1 .news_dianjing_detail").removeClass("active").eq($(this).index()).addClass("active");
         })
         $(".news_dianjing2").on("click",'li',function(){
             $(".news_dianjing2 li").removeClass("active").eq($(this).index()).addClass("active");
-            $(".news_dianjing_tab2 .news_dianjing_detial").removeClass("active").eq($(this).index()).addClass("active");
+            $(".news_dianjing_tab2 .news_dianjing_detail").removeClass("active").eq($(this).index()).addClass("active");
         })
     </script>
 </body>
