--- a/V1/index.html
+++ b/V1/index.html
@@ -698,8 +698,8 @@
                             </div>
                             <div class="game_fenlei_container">
                                 <div class="game_fenlei_div">
-                                    <img src="./images/wzry_white.png" alt="" class="a1">
-                                    <img src="./images/wzry_orange.png" alt="" class="a2">
+                                    <img src="./images/kpl_white.png" alt="" class="a1">
+                                    <img src="./images/kpl_orange.png" alt="" class="a2">
                                 </div>
                             </div>
                         </li>
@@ -709,8 +709,8 @@
                             </div>
                             <div class="game_fenlei_container">
                                 <div class="game_fenlei_div">
-                                    <img src="./images/LOL_white.png" alt="" class="a1">
-                                    <img src="./images/LOL_orange.png" alt="" class="a2">
+                                    <img src="./images/lol_white.png" alt="" class="a1">
+                                    <img src="./images/lol_orange.png" alt="" class="a2">
                                 </div>
                             </div>
                         </li>
@@ -720,8 +720,8 @@
                             </div>
                             <div class="game_fenlei_container">
                                 <div class="game_fenlei_div">
-                                   <img src="./images/dota_white.png" alt="" class="a1">
-                                   <img src="./images/dota_orange.png" alt="" class="a2">
+                                   <img src="./images/dota2_white.png" alt="" class="a1">
+                                   <img src="./images/dota2_orange.png" alt="" class="a2">
                                 </div>
                             </div>
                         </li>
