热门赛事图片自适应

--- a/V1/index.html
+++ b/V1/index.html
@@ -82,7 +82,7 @@
                                 <div class="game_match_bottom clearfix">
                                     <div class="left ov_1">
                                         <div class="game_match_img">
-                                            <img src="./images/match.png" alt="">
+                                            <img src="./images/banner.png" alt="">
                                         </div>
                                         <span>常规赛常规常规</span>
                                     </div>
