--- a/V1/saishisaicheng1.html
+++ b/V1/saishisaicheng1.html
@@ -173,12 +173,45 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="gold_progress_bar1">
-                                        <div class="gold_progress_bar"><div id="progressbar1"></div></div>
-                                        <div class="arrow-up1"></div>
-                                        <div class="arrow-down1 "></div>
-                                        <div class="gold_progress_bar"><div id="progressbar2"></div></div>
-                                       
+                                    <div class="pk-detail-con">
+                                        <div class="progress" >
+                                          <div class="progress-bar" style="width: 58%;">
+                                            <i class="lightning"></i>
+                                          </div>
+                                        </div>
+                                    </div>
+                                    <div class="game_detail_div1_item3">
+                                        <div class="left">
+                                            <div class="img1">
+                                                <img src="./images/kpl_dalong.png" alt="" class="autoimg">
+                                            </div>
+                                            <span>1</span>
+                                            <div class="img1">
+                                                <img src="./images/kpl_xiaolong.png" alt="" class="autoimg">
+                                            </div>
+                                            <span>3</span>
+                                            <div class="img1 img2">
+                                                <img src="./images/kpl_ta.png" alt="" class="autoimg">
+                                            </div>
+                                            <span>1</span>
+                                        </div>
+                                        <div class="left right">
+                                            <div class="img1">
+                                                <img src="./images/kpl_dalong.png" alt="" class="autoimg">
+                                            </div>
+                                            <span>2</span>
+                                            <div class="img1">
+                                                <img src="./images/kpl_xiaolong.png" alt="" class="autoimg">
+                                            </div>
+                                            <span>3</span>
+                                            <div class="img1 img2">
+                                                <img src="./images/kpl_ta.png" alt="" class="autoimg">
+                                            </div>
+                                            <span>0</span>
+                                        </div>
+                                    </div>
+                                    <div class="line2">
+
                                     </div>
                                 </div>
                             </div>
