--- a/V1/saishisaicheng11.html
+++ b/V1/saishisaicheng11.html
@@ -73,8 +73,8 @@
                             </div>
                         </div>
                         <div class="game_team_depiction">
-                            <p class="active">TeamWE是一家中国电子竞技俱乐部，成立于2005年4月21日，是TeamWE是一家中国电子竞技俱乐部，成立于2005年4月21日，是</p>
-                            <p class="active">SV电子竞技俱乐部于2016年11月成立。SuperValiant译为超级勇猛...SV电子竞技俱乐部于2016年11月成立。SuperValiant译为超级勇猛...</p>
+                            <p>TeamWE是一家中国电子竞技俱乐部，成立于2005年4月21日，是TeamWE是一家中国电子竞技俱乐部，成立于2005年4月21日，是</p>
+                            <p>SV电子竞技俱乐部于2016年11月成立。SuperValiant译为超级勇猛...SV电子竞技俱乐部于2016年11月成立。SuperValiant译为超级勇猛...</p>
                         </div>
                         <img src="./images/more.png" alt="" class="game_title_more">
                     </div>
@@ -173,47 +173,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="pk-detail-con">
-                                        <div class="progress" >
-                                          <div class="progress-bar" style="width: 58%;">
-                                            <i class="lightning"></i>
-                                          </div>
-                                        </div>
-                                    </div>
-                                    <div class="game_detail_div1_item3">
-                                        <div class="left">
-                                            <div class="img1">
-                                                <img src="./images/kpl_dalong.png" alt="" class="autoimg">
-                                            </div>
-                                            <span>1</span>
-                                            <div class="img1">
-                                                <img src="./images/kpl_xiaolong.png" alt="" class="autoimg">
-                                            </div>
-                                            <span>3</span>
-                                            <div class="img1 img2">
-                                                <img src="./images/kpl_ta.png" alt="" class="autoimg">
-                                            </div>
-                                            <span>1</span>
-                                        </div>
-                                        <div class="left right">
-                                            <div class="img1">
-                                                <img src="./images/kpl_dalong.png" alt="" class="autoimg">
-                                            </div>
-                                            <span>2</span>
-                                            <div class="img1">
-                                                <img src="./images/kpl_xiaolong.png" alt="" class="autoimg">
-                                            </div>
-                                            <span>3</span>
-                                            <div class="img1 img2">
-                                                <img src="./images/kpl_ta.png" alt="" class="autoimg">
-                                            </div>
-                                            <span>0</span>
-                                        </div>
-                                    </div>
-                                    <div class="line2"></div>
-                                </div>
-                                <div class="game_detail_item4">
-
                                 </div>
                             </div>
                         </div>
@@ -251,11 +210,14 @@
     <script src="./js/index.js"></script>
     <script src="./js/jquery.lineProgressbar.js"></script> 
     <script>
-        // 溢出隐藏，点击不隐藏
-        $(".game_title").on("click",".game_title_more",function(){
-            $(".game_title").find(".game_team_depiction p").toggleClass("active");
-            $(".game_title_more").toggleClass("active")
-        })
+        $('#progressbar2').LineProgressbar({
+				percentage: 58,
+				fillBackgroundColor: '#1abc9c'
+			});
+            $('#progressbar1').LineProgressbar({
+				percentage: 30,
+				fillBackgroundColor: '#1abc9c'
+			});
     </script>
 </body>
 </html>
