一点点修改

--- a/V1/saishisaicheng1.html
+++ b/V1/saishisaicheng1.html
@@ -376,7 +376,7 @@
                                             <div class="left">
                                                 <div class="vs_data_combat">
                                                     <div class="progress1_parent">
-                                                        <div class="progress1">
+                                                        <div class="progress1 blue">
                                                             <span style="width: 40%;"><span>95721</span></span>
                                                         </div>
                                                     </div>
