--- a/V1/saishisaicheng1.html
+++ b/V1/saishisaicheng1.html
@@ -97,8 +97,8 @@
                                     <span>GAME 1</span>
                                 </a>
                             </li>
-                           
-                          
+
+
                             <li class="">
                                 <a href="##">
                                     <div class="game_detail_img1">
@@ -540,11 +540,35 @@
                                         </li>
                                     </ul>
                                     <div class="vs_data3">
-                                        <div class="vs_data3_left">
-                                            <span class="title">近6场赛事数据</span>
-                                            <div class="compare-bar">
-                                                <div class="l-bar fll blue" style="width: 50%;"></div>
-                                                 <div class="r-bar flr red" style="width: 50%;"></div>
+                                        <div class="vs_data3_left active vs_data3_pad">
+                                            <p class="title">近6场赛事数据</p>
+                                            <div class="top-data clearfix">
+                                                <div class="l-data fl">
+                                                    <span class="win_rate mid">50%</span>
+                                                </div>
+                                                <div class="r-data fr">
+                                                    <span class="win_rate mid">70%</span>
+                                                </div>
+                                                <div class="rate">胜率</div>
+                                            </div>
+                                            <div class="compare-bar clearfix">
+                                                <div class="progress3 fl progress4 red">
+                                                    <span class="green" style="width: 40%;"></span>
+                                                </div>
+                                                <div class="progress3 fr blue">
+                                                    <span class="green" style="width: 60%;"></span>
+                                                </div>
+                                            </div>
+                                            <div class="rate_data">
+                                                <div class="rate_data_item">
+                                                    <div class="fl rate_data_left">
+                                                        <div class="rate_data_top">
+                                                            <span class="fl time1">31:05</span>
+                                                            <span class="fr time2">27:59</span>
+                                                            <div class="average_time">场均时长</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="table-wrap vs_data3_left">
@@ -575,10 +599,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -640,10 +666,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -705,10 +733,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -770,10 +800,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -835,10 +867,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -916,10 +950,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -981,10 +1017,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -1046,10 +1084,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -1111,10 +1151,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -1176,10 +1218,12 @@
                                                             </div>
                                                             <div class="jn-icon-wrap mid">
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills1.png" class="jn-icon">
+                                                                    <img src="./images/game_skills1.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                                 <div class="property-img property-img1">
-                                                                    <img src="./images/game_skills2.png" class="jn-icon">
+                                                                    <img src="./images/game_skills2.png"
+                                                                        class="jn-icon">
                                                                 </div>
                                                             </div>
                                                             <a href="##" target="_blank">
@@ -1284,7 +1328,7 @@
             // $(".game_team_div").removeClass("active").eq($(this).index()).addClass("active");
         })
 
-        if($(".game_detail_ul li").length >5){
+        if ($(".game_detail_ul li").length > 5) {
             console.log($(".game_detail_ul li").length)
             $(".game_detail_ul li").addClass("active1")
         }
